--- a/src/sass/_globals.scss
+++ b/src/sass/_globals.scss
@@ -1,2 +1,3 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;1,200&display=swap');
 $mobile_screen:600px;
+$smaller_screens:400px;
