--- a/src/sass/dashboard/_dashboard.scss
+++ b/src/sass/dashboard/_dashboard.scss
@@ -61,13 +61,11 @@ $background-color: #f3f7f5;
     }
 
     .logout {
-      margin: auto 0;
       width: 90%;
       padding: 10px;
       display: flex;
       background-color: #f4f8fa;
       font-family: "Poppins", sans-serif;
-      justify-self: end;
       cursor: pointer;
       transition: all 500ms ease;
 
@@ -119,20 +117,20 @@ $background-color: #f3f7f5;
         position: relative;
 
         h3 {
-            margin: 10px;
-            font-size: larger;
-            color: #B38644;
-            font-weight: bolder;
-            font-family: "Poppins", sans-serif;
+          margin: 10px;
+          font-size: larger;
+          color: #b38644;
+          font-weight: bolder;
+          font-family: "Poppins", sans-serif;
         }
 
-        img  {
-            position: absolute;
-            width: 200px;
-            height: 200px;
-            object-fit: contain;
-            top: 25%;
-            left: 30%;
+        img {
+          position: absolute;
+          width: 200px;
+          height: 200px;
+          object-fit: contain;
+          top: 25%;
+          left: 30%;
         }
       }
 
@@ -143,24 +141,24 @@ $background-color: #f3f7f5;
         background-color: white;
         border-radius: 7px;
         box-shadow: 0 0 4px #eee;
-        opacity: .6;
+        opacity: 0.6;
         padding: 0 15px;
 
         h2 {
-            color: #333;
-            font-family: "Poppins", sans-serif;
-            font-weight: bolder;
-            color: #0d3757;
-            font-size: medium;
-            margin: 15px;
+          color: #333;
+          font-family: "Poppins", sans-serif;
+          font-weight: bolder;
+          color: #0d3757;
+          font-size: medium;
+          margin: 15px;
         }
 
         p {
-            width: 100%;
-            margin: 5px 0;
-            color: #444;
-            font-size: small;
-            font-family: "Poppins", sans-serif;
+          width: 100%;
+          margin: 5px 0;
+          color: #444;
+          font-size: small;
+          font-family: "Poppins", sans-serif;
         }
       }
     }
@@ -182,15 +180,58 @@ $background-color: #f3f7f5;
       background-color: #9acdf8;
       border-radius: 7px;
       margin-top: 10px;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
     }
 
     .second-board {
       margin-top: 15px;
       width: 90%;
-      height: 300px;
+      height: 100%;
+      padding: 10px;
       background-color: #fff;
       border-radius: 7px;
       box-shadow: 0 0 #eee;
+
+      h3 {
+        font-family: "Poppins", sans-serif;
+        font-size: medium;
+        font-weight: bold;
+        color: #0d3757;
+      }
+
+      ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+
+        li {
+          padding: 10px;
+          color: #327bb3;
+          font-family: "Poppins", sans-serif;
+          font-size: medium;
+          background-color: transparent;
+          transition: all 500ms ease;
+          display: flex;
+          align-items: center;
+
+          img {
+              object-fit: contain;
+              width: 15px;
+              height: 15px;
+              margin-right: 10px;
+          }
+
+          &:hover {
+              background-color: #FFD494;
+              cursor: pointer;
+          }
+        }
+      }
     }
   }
 }
