--- a/src/sass/_globals.scss
+++ b/src/sass/_globals.scss
@@ -1,3 +1,81 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;1,200&display=swap');
 $mobile_screen:600px;
 $smaller_screens:400px;
+
+.error {
+    color: red;
+    font-family: "Poppins", sans-serif;
+    font-size: small;
+    font-weight: bold;
+}
+
+.all-channels {
+    width: 100%;
+
+    @media screen and (max-width: $mobile_screen) {
+        width: 100%;
+      }
+
+    height: auto;
+    padding: 20px;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    h2 {
+        color: #327BB3;
+        font-size: large;
+        font-family: "Poppins", sans-serif;
+        font-weight: bold;
+    }
+
+    ul{
+        list-style: none;
+        width: 400px;
+        @media screen and (max-width: $mobile_screen) {
+            width: 100%;
+          }
+        height: auto;
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        li {
+            width: 100%;
+            padding: 10px;
+            background-color: white;
+            margin: 10px 0;
+            box-sizing: border-box;
+            font-family: "Poppins", sans-serif;
+            display: flex;
+            position: relative;
+            align-items: center;
+            input {
+                position: relative;
+                margin-left: 80%;
+            }
+        }
+
+    }
+
+    button {
+        box-sizing: border-box;
+        width:400px;
+        @media screen and (max-width: $mobile_screen) {
+            width: 100%;
+          }
+        padding: 10px;
+        cursor: pointer;
+        border: none;
+        outline: none;
+        color: white;
+        font-weight: bold;
+        background-color: #327BB3;
+        font-family: "Poppins", sans-serif;
+        transition: all 500ms ease;
+        
+        &:hover {
+            background-color: #236fa8;
+        }
+    }
+}
