--- a/src/sass/dashboard/_dashboard.scss
+++ b/src/sass/dashboard/_dashboard.scss
@@ -8,8 +8,68 @@ $background-color: #f3f7f5;
   height: 100vh;
   background-color: $background-color;
   display: flex;
+  @media screen and (max-width: $mobile_screen) {
+    flex-direction: column;
+    align-items: center;
+  }
   position: absolute;
   overflow-x: hidden;
+
+  nav {
+    display: none;
+    width: 100%;
+    height: 300px;
+    position: relative;
+    @media screen and (max-width: $mobile_screen) {
+      display: block;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    background-color: #0d3757;
+
+    .mobile-menu-box {
+      position: absolute;
+      width: 30px;
+      height: 30px;
+      top: 20%;
+      left: 80%;
+      display: flex;
+      box-sizing: border-box;
+      flex-direction: column;
+      .menu {
+        width: 100%;
+        height: 3px;
+        margin-bottom: 2px;
+        background-color: white;
+      }
+    }
+
+    .list {
+      list-style: none;
+      background-color: transparent;
+      overflow: hidden;
+      width: auto;
+      margin-left: 38%;
+      margin-top: 40px;
+      box-sizing: border-box;
+
+      .list-item {
+        color: white;
+        box-sizing: border-box;
+        font-family: "Poppins", sans-serif;
+        background-color: transparent;
+        font-size: medium;
+        transition: all 500ms ease;
+        padding: 5px;
+
+        &:hover {
+          background-color: #327bb3;
+        }
+      }
+    }
+  }
 
   .left-panel {
     width: 220px;
@@ -22,6 +82,9 @@ $background-color: #f3f7f5;
     flex-direction: column;
     align-items: center;
     padding: 0 10px;
+    @media screen and (max-width: $mobile_screen) {
+      display: none;
+    }
 
     img {
       object-fit: contain;
@@ -84,6 +147,61 @@ $background-color: #f3f7f5;
     padding: 20px;
     align-items: center;
 
+    .second-board-two {
+      margin-top: 15px;
+      width: 90%;
+      height: 100%;
+      padding: 10px;
+      background-color: #fff;
+      border-radius: 7px;
+      box-shadow: 0 0 #eee;
+
+      @media screen and (max-width: $mobile_screen) {
+        height: auto;
+      }
+
+      h3 {
+        font-family: "Poppins", sans-serif;
+        font-size: medium;
+        font-weight: bold;
+        color: #0d3757;
+      }
+
+      ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+
+        li {
+          padding: 10px;
+          color: #327bb3;
+          font-family: "Poppins", sans-serif;
+          font-size: medium;
+          background-color: transparent;
+          transition: all 500ms ease;
+          display: flex;
+          align-items: center;
+
+          img {
+            object-fit: contain;
+            width: 15px;
+            height: 15px;
+            
+            margin-right: 10px;
+          }
+
+          &:hover {
+            background-color: #ffd494;
+            cursor: pointer;
+          }
+        }
+      }
+    }
+
+    @media screen and (max-width: $mobile_screen) {
+      width: 85%;
+    }
+
     input {
       width: 90%;
       padding: 12px 20px;
@@ -107,9 +225,15 @@ $background-color: #f3f7f5;
       height: 300px;
       margin: 10px 0;
       display: flex;
+      @media screen and (max-width: $mobile_screen) {
+        flex-direction: column;
+      }
       .update {
         width: 50%;
         height: 100%;
+        @media screen and (max-width: $mobile_screen) {
+          width: 100%;
+        }
         background-color: #ffd494;
         border-radius: 7px;
         box-shadow: 0 0 4px #eee;
@@ -128,6 +252,12 @@ $background-color: #f3f7f5;
           position: absolute;
           width: 200px;
           height: 200px;
+          @media screen and (max-width: $mobile_screen) {
+            width: 50px;
+            height: 50px;
+            left: 5%;
+            top: 30%;
+          }
           object-fit: contain;
           top: 25%;
           left: 30%;
@@ -136,6 +266,10 @@ $background-color: #f3f7f5;
 
       .update-info {
         width: 50%;
+        @media screen and (max-width: $mobile_screen) {
+          width: 90%;
+          margin-left: 0;
+        }
         margin-left: 10px;
         height: 100%;
         background-color: white;
@@ -171,6 +305,9 @@ $background-color: #f3f7f5;
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media screen and (max-width: $mobile_screen) {
+      display: none;
+    }
     overflow: hidden;
     position: sticky;
     top: 0;
@@ -197,6 +334,10 @@ $background-color: #f3f7f5;
       border-radius: 7px;
       box-shadow: 0 0 #eee;
 
+      @media screen and (max-width: $mobile_screen) {
+        height: auto;
+      }
+
       h3 {
         font-family: "Poppins", sans-serif;
         font-size: medium;
@@ -220,15 +361,16 @@ $background-color: #f3f7f5;
           align-items: center;
 
           img {
-              object-fit: contain;
-              width: 15px;
-              height: 15px;
-              margin-right: 10px;
+            object-fit: contain;
+            width: 15px;
+            height: 15px;
+            
+            margin-right: 10px;
           }
 
           &:hover {
-              background-color: #FFD494;
-              cursor: pointer;
+            background-color: #ffd494;
+            cursor: pointer;
           }
         }
       }
