--- a/src/sass/login/_login.scss
+++ b/src/sass/login/_login.scss
@@ -10,9 +10,14 @@ $background-color: white;
 .login_container {
   width: 100%;
   height: 100vh;
+  z-index: 2;
   position: relative;
   overflow: hidden;
   background-color: $background-color;
+
+  @media screen and (min-width:1500px) {
+    background-color: whitesmoke;
+  }
 
   .top-shape {
     clip-path: circle(44.4% at 49% 49%);
@@ -99,8 +104,14 @@ $background-color: white;
           margin: 10px 0;
           border: none;
           font-weight: bold;
+          background-color: white;
           font-size: 14px;
           border-bottom: 2px solid #eee;
+          @media screen and (min-width:1500px) {
+            background-color: whitesmoke;
+            border-bottom: 2px solid #ddd;
+          }
+
           padding: 10px;
           color: #444;
           outline: none;
